Test/typing/should_fail/duplicate_classes.java
package tutu.titi.toto;

class A {}

class A {}
